<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    tools:context="com.splogics.firebase.mesogen.MainActivity">
    <TextView
        android:id="@+id/text_view_add_data_sieve_mix_top_header"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/select_mix_and_sieve_data"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/EditTextGap"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toTopOf="parent"/>

    <ListView
        android:id="@+id/list_view_show_data"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_add_data_sieve_mix_top_header"
        app:layout_constraintBottom_toTopOf="@+id/button_cancel_show_dat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_cancel_show_dat"
        android:layout_width="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/list_view_show_data"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/text_view_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="5dp"
        android:text="@string/app_name"
        android:textColor="@color/purple_700"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_cancel_show_dat"/>

    <TextView
        android:id="@+id/edit_text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center_horizontal"
        android:text="@string/version_no"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="5dp"
        android:text="@string/company_name"
        android:textColor="@color/purple_700"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_app_name"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

